--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -59,6 +59,30 @@
             app:layout_constraintTop_toBottomOf="@+id/resultText" />
 
         <TextView
+            android:id="@+id/emissionSplitText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="@string/emission_split_text"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/resultChart"
+            style="@style/BlackText"/>
+
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/emissionSplitChart"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/emissionSplitText" />
+
+
+        <TextView
             android:id="@+id/suggestionText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -66,7 +90,7 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/resultChart"
+            app:layout_constraintTop_toBottomOf="@+id/emissionSplitChart"
             style="@style/BlackText"/>
 
         <com.github.mikephil.charting.charts.HorizontalBarChart
