--- a/app/src/main/res/layout/activity_adding_food.xml
+++ b/app/src/main/res/layout/activity_adding_food.xml
@@ -45,7 +45,8 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/headerView">
+            android:layout_below="@id/headerView"
+            android:background="@drawable/background">
 
             <LinearLayout
                 android:layout_width="match_parent"
