--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -52,9 +52,10 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="40dp"
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/resultText" />
 
@@ -82,26 +83,114 @@
             app:layout_constraintTop_toBottomOf="@+id/emissionSplitText" />
 
 
-        <TextView
-            android:id="@+id/suggestionText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/emissionSplitChart"
-            style="@style/BlackText"/>
-
         <com.github.mikephil.charting.charts.HorizontalBarChart
             android:id="@+id/suggestionChart"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="52dp"
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/suggestionText" />
+            app:layout_constraintTop_toBottomOf="@+id/suggestionText3" />
+
+        <TextView
+            android:id="@+id/suggestionText1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/suggestion_text_1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/emissionSplitChart"
+            style="@style/BlackText" />
+
+        <TextView
+            android:id="@+id/reduceSuggestionText"
+            style="@style/BlackText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toEndOf="@+id/suggestionText1"
+            app:layout_constraintTop_toBottomOf="@+id/emissionSplitChart" />
+
+        <TextView
+            android:id="@+id/suggestionText2"
+            style="@style/BlackText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/suggestion_text_2"
+            app:layout_constraintStart_toEndOf="@+id/reduceSuggestionText"
+            app:layout_constraintTop_toBottomOf="@+id/emissionSplitChart" />
+
+        <TextView
+            android:id="@+id/increaseSuggestionText"
+            style="@style/BlackText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toEndOf="@+id/suggestionText2"
+            app:layout_constraintTop_toBottomOf="@+id/emissionSplitChart" />
+
+        <TextView
+            android:id="@+id/suggestionText3"
+            style="@style/BlackText"
+            android:layout_width="334dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/suggestion_text_3"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/suggestionText2" />
+
+        <TextView
+            android:id="@+id/userLegend"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/user_legend"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/resultText"
+            style="@style/YellowText"/>
+
+        <TextView
+            android:id="@+id/averageLegend"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="@string/average_legend"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/resultText"
+            style="@style/GreenText"/>
+
+        <TextView
+            android:id="@+id/userLegend2"
+            style="@style/YellowText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="24dp"
+            android:text="@string/user_legend"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/suggestionText3" />
+
+        <TextView
+            android:id="@+id/suggestionLegen"
+            style="@style/GreenText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="8dp"
+            android:text="@string/suggestion_legend"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/suggestionText3" />
 
 
     </android.support.constraint.ConstraintLayout>
