--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,4 +33,16 @@
         <item name="android:paddingEnd">10dp</item>
     </style>
 
+    <style name="YellowText" parent="@android:style/TextAppearance.Small">
+        <item name="android:textColor">#FFCC00</item>
+        <item name="android:paddingStart">10dp</item>
+        <item name="android:paddingEnd">10dp</item>
+    </style>
+
+    <style name="GreenText" parent="@android:style/TextAppearance.Small">
+        <item name="android:textColor">#006400</item>
+        <item name="android:paddingStart">10dp</item>
+        <item name="android:paddingEnd">10dp</item>
+    </style>
+
 </resources>
