--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -47,18 +47,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/resultGreeter" />
 
-        <com.github.mikephil.charting.charts.HorizontalBarChart
-            android:id="@+id/resultChart"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/resultText" />
-
         <TextView
             android:id="@+id/emissionSplitText"
             style="@style/BlackText"
@@ -69,12 +57,12 @@
             android:text="@string/emission_split_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/resultChart" />
+            app:layout_constraintTop_toBottomOf="@+id/resultText" />
 
         <com.github.mikephil.charting.charts.PieChart
             android:id="@+id/emissionSplitChart"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="350dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
@@ -82,156 +70,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/emissionSplitText" />
 
-
-        <com.github.mikephil.charting.charts.HorizontalBarChart
-            android:id="@+id/suggestionChart"
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="36dp"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/suggestionText3" />
-
-        <TextView
-            android:id="@+id/suggestionText1"
-            style="@style/BlackText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="32dp"
-            android:text="@string/suggestion_text_1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/emissionSplitChart" />
-
-        <TextView
-            android:id="@+id/reduceSuggestionText"
-            style="@style/BlackText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="32dp"
-            app:layout_constraintStart_toEndOf="@+id/suggestionText1"
-            app:layout_constraintTop_toBottomOf="@+id/emissionSplitChart" />
-
-        <TextView
-            android:id="@+id/suggestionText2"
-            style="@style/BlackText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="32dp"
-            android:text="@string/suggestion_text_2"
-            app:layout_constraintStart_toEndOf="@+id/reduceSuggestionText"
-            app:layout_constraintTop_toBottomOf="@+id/emissionSplitChart" />
-
-        <TextView
-            android:id="@+id/suggestionText3"
-            style="@style/BlackText"
-            android:layout_width="334dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
-            android:text="@string/suggestion_text_3"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/suggestionText2" />
-
-        <TextView
-            style="@style/YellowText"
+        <Button
+            android:id="@+id/getSuggestion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="@string/user_legend"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/resultText" />
-
-        <TextView
-            style="@style/GreenText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:text="@string/average_legend"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/resultText" />
-
-        <TextView
-            style="@style/YellowText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="12dp"
-            android:text="@string/user_legend"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/suggestionText3" />
-
-        <TextView
-            style="@style/GreenText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="8dp"
-            android:text="@string/suggestion_legend"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/suggestionText3" />
-
-        <TextView
-            android:id="@+id/vancouverText"
-            style="@style/BlackText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="8dp"
-            android:text="@string/all_vancouver"
+            android:text="@string/get_suggestion"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/suggestionChart" />
-
-        <TextView
-            android:id="@+id/carbonHeading"
-            style="@style/GreenHeading"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="12dp"
-            android:text="@string/carbon_save"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/vancouverText" />
-
-        <TextView
-            android:id="@+id/carbonSaved"
-            style="@style/BlackText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="32dp"
-            app:layout_constraintStart_toEndOf="@+id/carbonHeading"
-            app:layout_constraintTop_toBottomOf="@+id/vancouverText" />
-
-        <TextView
-            android:id="@+id/treeHeading"
-            style="@style/GreenHeading"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="12dp"
-            android:text="@string/trees_save"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/carbonHeading" />
-
-        <TextView
-            android:id="@+id/treesSaved"
-            style="@style/BlackText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="32dp"
-            app:layout_constraintStart_toEndOf="@+id/treeHeading"
-            app:layout_constraintTop_toBottomOf="@+id/carbonHeading" />
+            app:layout_constraintTop_toBottomOf="@+id/emissionSplitChart" />
 
 
     </android.support.constraint.ConstraintLayout>
